--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "CI=false npm run build"
   publish = "build"
   functions = "functions"
 
@@ -7,8 +7,23 @@
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
 
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
-  status = 200 
+  status = 200
+
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["express", "mongoose"]
+
+[functions.api]
+  timeout = 30
+
+[build.environment]
+  CI = "false"
+  NODE_VERSION = "18"
+  SKIP_PREFLIGHT_CHECK = "true"
+  REACT_APP_API_URL = "https://gymbrotherz.netlify.app/.netlify/functions/api"
+  NODE_ENV = "production" 
