--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mein-projekt",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
@@ -11,15 +12,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "serverless-http": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server/server.js",
-    "dev": "concurrently \"npm run server\" \"SET BROWSER=none && SET PORT=3000 && npm start\""
+    "dev": "concurrently \"npm run server\" \"SET BROWSER=none && SET PORT=3000 && npm start\"",
+    "server": "node server/server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "rimraf": "^5.0.10"
   }
 }
