--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "CI=false npm install && CI=false npm run build"
   publish = "build"
   functions = "functions"
 
@@ -27,4 +27,4 @@
   SKIP_PREFLIGHT_CHECK = "true"
   REACT_APP_API_URL = "https://gymbrotherz.netlify.app/.netlify/functions/api"
   NODE_ENV = "production"
-  NPM_FLAGS = "--legacy-peer-deps" 
+  NODE_OPTIONS = "--max_old_space_size=4096" 
