--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "CI=false npm install && CI=false npm run build"
+  command = "npm install && INLINE_RUNTIME_CHUNK=false CI=false npm run build"
   publish = "build"
   functions = "functions"
 
