--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mein-projekt",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://gymbrotherz.netlify.app",
   "dependencies": {
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "prebuild": "npm install",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
