--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mein-projekt",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gymbrotherz.netlify.app",
+  "homepage": ".",
   "dependencies": {
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
@@ -18,11 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
+    "build": "react-scripts build",
     "prebuild": "npm install",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"npm run server\" \"SET BROWSER=none && SET PORT=3000 && npm start\"",
+    "dev": "concurrently \"npm run server\" \"npm start\"",
     "server": "node server/server.js"
   },
   "eslintConfig": {
